Создал необходимые view по дизайну подключил Room

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">scbguide</string>
+
+    <!-- Main -->
+    <string name="mainTitle">Добро пожаловать в справочник!</string>
+    <string name="mainFirstPathSubTitle">+150</string>
+    <string name="mainSecondPathSubTitle">устройств</string>
+    <string name="mainBannerTipsTitle">Совет по изучению устройств</string>
+    <string name="mainBannerTipsDescription">По очередности изучай все темы. Когда все темы будут изучены проверь свои знания на тестах, повышай уровень сложности по мере исчезновения ошибок!</string>
+    <string name="mainLecture">Лекторий</string>
+    <string name="mainTest">Проверь себя</string>
+    <string name="mainThemes">%s тем</string>
+
+    <!-- Lecture -->
+    <string name="lectureSearchHint">Поиск</string>
+
+    <!-- Details Lecture -->
+    <string name="detailsLectureTitleDescription">Описание</string>
+    <string name="detailsLectureWatchFull">Смотреть полностью</string>
+    <!-- Topics -->
 </resources>
