--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">scbguide</string>
+    <string name="buttonErrorDialogRepeat">Повторить подключение</string>
+    <string name="buttonErrorDialogCancel">Отменить</string>
+    <string name="messageFailure">Произошла неизвестная ошибка, проверьте соединение с интернет</string>
 
     <!-- Main -->
     <string name="mainTitle">Добро пожаловать в справочник!</string>
